# PersonalD

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  personalctl  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: tests.yml
browser-extension/: README.md  background.js  manifest.json
config-examples/: rules.yaml  schedule.yaml
personald/: __init__.py  activity.py  browser.py  calendar.py  cli.py  config.py  daemon.py  environment.py  focus.py  hyprland.py  models.py  notify.py  plan.py  report.py  rules.py  schedule.py  state.py  status.py  storage.py
systemd/: personald.service
tests/: test_activity.py  test_browser.py  test_calendar.py  test_cli.py  test_environment.py  test_focus.py  test_plan.py  test_report.py  test_schedule.py  test_status.py
